# da-agent

./: main.py  pyproject.toml
src/: __init__.py
src/agent/: __init__.py  checkpointer.py  graph.py  llm.py  state.py  tracer.py
src/agent/nodes/: __init__.py  asset.py  eda.py  evaluation.py  hitl.py  jupyter.py  modeling.py  planning.py  preprocessing.py
tests/: __init__.py  test_plan.py
tests/inputs/: __init__.py  eda_inputs.py  modeling_inputs.py  planning_inputs.py  preprocessing_inputs.py
